apps/development/renegocie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: renegocie-deployment
  namespace: development
  labels:
    app: renegocie
spec:
  replicas: 5
  selector:
    matchLabels:
      name: renegocie
  template:
    metadata:
      labels:
        name: renegocie
    spec:
      containers:
        - name: renegocie
          image: fclebinho/bpnegociacaoapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
