apps/development/renegocie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: renegocie-ingress
  namespace: development
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: renegocie.kub3.dev
    http:
      paths:
      - backend:
          service:
            name: renegocie-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - renegocie.kub3.dev
    secretName: le-renegocie-dev-cert-tls
